--- a/app/src/main/res/layout/dialog_question.xml
+++ b/app/src/main/res/layout/dialog_question.xml
@@ -12,6 +12,10 @@
         android:padding="10dp"
         android:textColor="@color/white"
         android:layout_height="wrap_content"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"
         android:text="Question"
         android:textSize="18sp"
         android:layout_marginBottom="16dp" />
@@ -33,6 +37,10 @@
             <Button
                 android:id="@+id/answerButton1"
                 android:layout_width="match_parent"
+                android:shadowColor="@android:color/black"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="3"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@null"
                 android:foregroundTint="@null"
@@ -46,6 +54,10 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@null"
                 android:foregroundTint="@null"
+                android:shadowColor="@android:color/black"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="3"
                 android:background="@color/transparent"
                 android:layout_margin="4dp"
                 android:text="Answer 3" />
@@ -64,6 +76,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@null"
+                android:shadowColor="@android:color/black"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="3"
                 android:foregroundTint="@null"
                 android:background="@color/transparent"
                 android:layout_margin="4dp"
@@ -74,6 +90,10 @@
                 android:id="@+id/answerButton4"
                 android:layout_width="match_parent"
                 android:backgroundTint="@null"
+                android:shadowColor="@android:color/black"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="3"
                 android:foregroundTint="@null"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
