--- a/app/src/main/res/drawable/health_bar_player1.xml
+++ b/app/src/main/res/drawable/health_bar_player1.xml
@@ -1,14 +1,21 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- Background item with corner radius -->
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="#FF000000" />
+            <solid android:color="#FF000000" /> <!-- Black color -->
+            <corners android:radius="8dp" /> <!-- Corner radius -->
         </shape>
     </item>
+
+    <!-- Progress item with corner radius -->
     <item android:id="@android:id/progress">
         <clip>
             <shape android:shape="rectangle">
                 <solid android:color="#FF00FF00" /> <!-- Green color -->
+                <corners android:radius="8dp" /> <!-- Corner radius -->
             </shape>
         </clip>
     </item>
+
 </layer-list>
