--- a/app/src/main/res/layout/fragment_battle.xml
+++ b/app/src/main/res/layout/fragment_battle.xml
@@ -12,7 +12,10 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/bgbattle" />
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#79000000" />
     <!-- Health and Character Avatars: Player 1 -->
     <LinearLayout
         android:id="@+id/player1Layout"
@@ -25,13 +28,14 @@
         <!-- Player 1 Avatar -->
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/player1Avatar"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/icon_logo_holder"
             android:layout_marginEnd="8dp" />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
             android:orientation="vertical">
             <ProgressBar
                 android:id="@+id/player1HealthBar"
@@ -46,8 +50,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|top"
                 android:text="99"
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/irish"
                 android:textColor="@android:color/white"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
 
@@ -63,7 +69,7 @@
         android:layout_margin="16dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <ProgressBar
                 android:id="@+id/player2HealthBar"
@@ -78,14 +84,15 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|top"
                 android:text="99"
+                android:fontFamily="@font/irish"
                 android:textColor="@android:color/white"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
         </LinearLayout>
         <!-- Player 2 Avatar -->
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/player2Avatar"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/icon_logo_holder"
             android:layout_marginStart="8dp" />
     </LinearLayout>
@@ -93,12 +100,15 @@
     <!-- Timer in the center of the screen -->
     <TextView
         android:id="@+id/timerText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="center_horizontal|top"
-        android:text="99"
+        android:text="99s"
+        android:fontFamily="@font/irish"
+        android:textAlignment="center"
+        android:gravity="center"
         android:textColor="@android:color/white"
-        android:textSize="40sp"
+        android:textSize="20sp"
         android:layout_marginTop="16dp"
         android:background="@drawable/timer_background"
         android:padding="8dp" />
