--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,130 +1,149 @@
-<HorizontalScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:scrollbars="none"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:scrollbars="none">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <HorizontalScrollView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5">
 
-        <ImageView
-            android:id="@+id/mapBackground"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/map"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/mapBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/map"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/icon_logo_holder"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/level1Marker"
+                android:layout_width="48dp"
+                android:layout_height="56dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="156dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/torch"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/tvLevel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="@font/irish"
-            android:text="Lvl 1"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/icon"
-            app:layout_constraintTop_toTopOf="@+id/icon" />
+            <ImageView
+                android:id="@+id/level4Marker"
+                android:layout_width="59dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="160dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/locked_level"
+                app:layout_constraintStart_toEndOf="@+id/level3Marker"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvPoints"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="@font/irish"
-            android:text="Lvl 1"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/icon"
-            app:layout_constraintStart_toEndOf="@+id/icon"
-            app:layout_constraintTop_toBottomOf="@+id/tvLevel" />
+            <ImageView
+                android:id="@+id/level5Marker"
+                android:layout_width="59dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="44dp"
+                android:layout_marginTop="200dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/locked_level"
+                app:layout_constraintStart_toStartOf="@+id/level4Marker"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/level1Marker"
-            android:layout_width="28dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginBottom="164dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/torch"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <ImageView
+                android:id="@+id/level3Marker"
+                android:layout_width="59dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="140dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/locked_level"
+                app:layout_constraintStart_toEndOf="@+id/level2Marker"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/level4Marker"
-            android:layout_width="59dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="160dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/locked_level"
-            app:layout_constraintStart_toEndOf="@+id/level3Marker"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/level5Marker"
-            android:layout_width="59dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="200dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/locked_level"
-            app:layout_constraintStart_toStartOf="@+id/level4Marker"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/level3Marker"
-            android:layout_width="59dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="140dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/locked_level"
-            app:layout_constraintStart_toEndOf="@+id/level2Marker"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/level2Marker"
-            android:layout_width="48dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="164dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/locked_level"
-            app:layout_constraintStart_toEndOf="@+id/level1Marker"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/level2Marker"
+                android:layout_width="48dp"
+                android:layout_height="56dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="164dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/locked_level"
+                app:layout_constraintStart_toEndOf="@+id/level1Marker"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</HorizontalScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </HorizontalScrollView>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/frame_profile"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvLevel"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/irish"
+        android:text="Lvl 1"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/icon"
+        app:layout_constraintTop_toTopOf="@+id/icon" />
+
+    <TextView
+        android:id="@+id/tvPoints"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/irish"
+        android:text="Lvl 1"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/icon"
+        app:layout_constraintStart_toEndOf="@+id/icon"
+        app:layout_constraintTop_toBottomOf="@+id/tvLevel" />
+</androidx.constraintlayout.widget.ConstraintLayout>
